[package]
name = "rustvail-osc"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou_osc = "0.19.0"
eframe = "0.31.0"

[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
ProductName = "RustVail OSC"
OriginalFilename = "rustvail-osc.exe"
LegalCopyright = "Copyright (c) 2025 Aeelx"
FileDescription = "RustVail OSC - Fake OSC Trackers for VRChat"

[profile.release]
opt-level = 3  # All optimizations
lto = "fat"  # Enable Link Time Optimization
codegen-units = 1  # Reduce codegen units to enhance optimization
panic = "abort"  # Use abort strategy for panics to reduce binary size